# trade_bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.gitea/workflows/: publish.yaml  rust.yaml
assets/common/items/npc_armor/biped_small/bushly/hand/: bushly.ron
config/: config.toml
src/: bot.rs  config.rs  main.rs
