[package]
name = "trade-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.38.0"
veloren-common = { git = "https://gitlab.com/veloren/veloren", tag = "weekly" , features = ["no-assets"] }
veloren-common-net = { git = "https://gitlab.com/veloren/veloren", tag = "weekly"  }
veloren-client = { git = "https://gitlab.com/veloren/veloren", tag = "weekly"  }
veloren-world = { git = "https://gitlab.com/veloren/veloren", tag = "weekly"  }
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
vek = "0.17.0"

[patch.crates-io]
specs = { git = "https://github.com/amethyst/specs.git", rev = "4e2da1df29ee840baa9b936593c45592b7c9ae27" }
