[package]
name = "trade-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.38.0"
veloren-common = { git = "https://gitlab.com/veloren/veloren", tag = "weekly", features = [
    "no-assets",
] }
veloren-common-net = { git = "https://gitlab.com/veloren/veloren", tag = "weekly" }
veloren-client = { git = "https://gitlab.com/veloren/veloren", tag = "weekly" }
veloren-world = { git = "https://gitlab.com/veloren/veloren", tag = "weekly" }
veloren-client-i18n = { git = "https://gitlab.com/veloren/veloren", tag = "weekly" }
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
vek = { version = "0.17.0" }
hashbrown = { version = "0.15.1", features = ["equivalent"] }

[patch.crates-io]
specs = { git = "https://github.com/amethyst/specs.git", rev = "4e2da1df29ee840baa9b936593c45592b7c9ae27" }
hashbrown = { git = "https://github.com/rust-lang/hashbrown.git", rev = "458e44532a65cf850bde3c22bd5d30a1ce2ed6af" }
